<!--
  ~ Copyright (c) 2017 James Yox
  ~
  ~ This file is part of ColdSnap.
  ~
  ~ ColdSnap is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ColdSnap is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ColdSnap.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>

    <!-- Settings -->
    <string name="temperature_scale">Temperature Scale</string>
    <string name="minimum_temp_label">Minimum Temperature</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="kelvin">Kelvin</string>
    <string-array name="temperature_scales">
        <item>@string/fahrenheit</item>
        <item>@string/celsius</item>
        <item>@string/kelvin</item>
    </string-array>


    <string name="app_name">ColdSnap</string>
    <string name="action_settings">Settings</string>
    <string name="plant_name_label">Plant Name</string>
    <string name="plant_scientific_name_label">Scientific Name</string>
    <string name="new_plant">New Plant</string>
    <string name="delete_plant">Delete Plant</string>
    <string name="last_weather_update">Last Updated:</string>
    <string name="high_temp">High:</string>
    <string name="low_temp">Low:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="plant_added">Plant Added</string>
    <string name="plant_updated">Plant Updated</string>
    <string name="plant_deleted">Plant Deleted</string>
    <string name="set_location">Set Location</string>
    <string name="device_location_fail_message">Could not acquire device location. Ensure location is on.</string>

    <string-array name="temperature_formats">
        <item>"°F"</item>
        <item>"°C"</item>
    </string-array>
    <string-array name="temperature_formats_values">
        <item>"F"</item>
        <item>"C"</item>
    </string-array>

    <string name="plant_threshold_expl">The temperature at which this plant will be damaged and could die</string>
    <string name="preference_threshold_expl">If the low temperature is below this amount the app will alert you.</string>
    <string name="preference_fuzz_expl">This temperature value represents your confidence that the weather data is accurate. If a low temperature is within this amount of a cold threshold for a plant you will be warned.</string>
    <string name="preference_coldalarm_expl">This is the time that the app will send all notifications (such as cold warnings).</string>

    <string name="plant_load_error">Plant failed to load</string>
    <string name="plant_save_error">Could not save plant</string>
    <string name="plant_add_error">Could not add plant</string>
    <string name="plant_delete_error">Could not delete plant</string>

    <string name="location_permission_denied">Cannot use location due to permissions denial. Feel free to manually set the location</string>
    <string name="no_location_providers_error">No location services available. Is location disabled?</string>
    <string name="about">About</string>
    <string name="coldsnap">ColdSnap</string>
    <string name="by_james_yox">By: James Yox</string>
    <string name="open_source_licence">Open Source Licence</string>
    <string name="gpl_v3_0">GPL v3.0</string>
    <string name="view_source">View Source</string>
    <string name="github">GitHub</string>
    <string name="help">Help</string>
    <string name="report_bug">Report Bug</string>
    <string name="suggestions">Suggestions</string>
    <string name="changelog">Changelog</string>
    <string name="special_thanks">Special Thanks</string>
    <string name="wunderground">WunderGround</string>
    <string name="icons8">Icons8</string>
    <string name="powered_by">Powered By</string>
    <string name="connection_failure">Connection Failure</string>
    <string name="settings">Settings</string>
    <string name="plants">Plants</string>
    <string name="feed">Feed</string>

    <!-- Temperature Graph -->
    <string name="temperature_graph_title">Temperature</string>
    <string name="freezing">Freezing</string>
    <string name="cold_threshold">User Threshold</string>
</resources>
