<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 James Yox
  ~
  ~ This file is part of ColdSnap.
  ~
  ~ ColdSnap is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ColdSnap is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ColdSnap.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true"
                                                 tools:context=".ui.AboutActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/cold_snap_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/cold_snap_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coldsnap"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/cold_snap_title"
                android:text="0.0-DEVELOPMENT"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/by_james_yox"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/licence_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/licence_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_source_licence"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/gpl_v3_0"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/view_source_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/view_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_source"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/github"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/help_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:padding="16dp">

            <TextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
</android.support.design.widget.CoordinatorLayout>