<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 James Yox
  ~
  ~ This file is part of ColdSnap.
  ~
  ~ ColdSnap is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ColdSnap is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ColdSnap.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/plant_name_label"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageViewContainer"/>

    <EditText
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="25"
        android:textSize="12sp"
        android:inputType="textCapWords|textNoSuggestions"
        android:layout_below="@+id/name_label"
        android:layout_toEndOf="@+id/imageViewContainer"/>

    <TextView
        android:id="@+id/scientific_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plant_scientific_name_label"
        android:layout_below="@+id/name_text"
        android:layout_alignStart="@+id/name_label"/>

    <EditText
        android:id="@+id/scientific_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:maxLength="40"
        android:inputType="textCapSentences|textNoSuggestions"
        android:layout_below="@+id/scientific_name_label"
        android:layout_toEndOf="@+id/imageViewContainer"/>

    <RelativeLayout
        android:id="@+id/imageViewContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/minimum_temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scientific_name_text"
        android:layout_marginTop="32dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/minimum_temp_label" />

    <com.yoxjames.coldsnap.ui.controls.temperaturepicker.TemperaturePickerRelative
        android:id="@+id/minimum_temp_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/minimum_temperature_text"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</RelativeLayout>