<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 James Yox
  ~
  ~ This file is part of ColdSnap.
  ~
  ~ ColdSnap is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ColdSnap is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ColdSnap.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginTop="16sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/location_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="Kansas City, MO - 64105"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/high_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_temp"
                android:textColor="@android:color/holo_red_light"/>

            <TextView
                android:id="@+id/high_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                tools:text="75°F (5:00pm)"/>

            <TextView
                android:id="@+id/low_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_temp"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/low_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                tools:text="35°F (3:00am)"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/last_updated_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/last_weather_update"/>
            <TextView
                android:id="@+id/last_updated_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:textSize="12sp"
                tools:text="12:00am 4/5/2017"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>