<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017 James Yox
  ~
  ~ This file is part of ColdSnap.
  ~
  ~ ColdSnap is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ ColdSnap is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with ColdSnap.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.yoxjames.coldsnap.ui.weatherpreviewbar.WeatherPreviewBarView
    xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:padding="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/preview_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="16dp"
        android:paddingStart="16dp">

        <LinearLayout
            android:id="@+id/weather_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:id="@+id/location_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                tools:text="Kansas City, MO"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/preview_bar_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_centerHorizontal="true">
                </ProgressBar>

                <ImageView
                    android:id="@+id/failed_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/error_icon"
                    android:visibility="invisible"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:id="@+id/preview_bar_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="invisible"
                    android:layout_alignBottom="@+id/preview_bar_progress">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/high_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:text="@string/high_temp"
                            android:textColor="@android:color/holo_red_light"/>

                        <TextView
                            android:id="@+id/high_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:layout_marginStart="2dp"
                            tools:text="75°F"/>

                        <TextView
                            android:id="@+id/low_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:textSize="16sp"
                            android:text="@string/low_temp"
                            android:textColor="@android:color/holo_blue_light"/>

                        <TextView
                            android:id="@+id/low_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:textSize="16sp"
                            tools:text="35°F"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/last_updated_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/last_weather_update"
                            android:textSize="12sp"/>

                        <TextView
                            android:id="@+id/last_updated_field"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:textSize="12sp"
                            tools:text="Oct 1 2017"/>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/darker_gray"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible">

        </ImageView>
    </RelativeLayout>
</com.yoxjames.coldsnap.ui.weatherpreviewbar.WeatherPreviewBarView>


